# s2search

./: pyproject.toml  requirements.txt
