[project]
name = "s2search"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "unidecode",
    "nltk",
    "blingfire",
    "awscli",
    "lightgbm>=2.3.1",
    "kenlm @ https://github.com/kpu/kenlm/archive/master.zip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
